<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.PasswordManageActivity">

        <com.gk.world.resouce.dynamic.CustomTitleView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/alert_pas" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/dp_15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/ole"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_40"
                android:gravity="center"
                android:text="@string/ols_pas"
                android:textColor="@color/black_333"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/old_et"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_40"
                android:layout_marginStart="@dimen/dp_15"
                android:background="@null"
                android:gravity="end|center_vertical"
                android:hint="@string/input_ols_pas"
                android:inputType="textPassword"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="@+id/ole"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ole"
                app:layout_constraintTop_toTopOf="@+id/ole" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/new_p"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_40"
                android:gravity="center"
                android:text="@string/new_pas"
                android:textColor="@color/black_333"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ole" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/new_et"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_40"
                android:layout_marginStart="@dimen/dp_15"
                android:background="@null"
                android:gravity="end|center_vertical"
                android:hint="@string/input_new_pas"
                android:inputType="textPassword"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="@+id/new_p"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/new_p"
                app:layout_constraintTop_toTopOf="@+id/new_p" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/new_again"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_40"
                android:gravity="center"
                android:text="@string/new_pas_a"
                android:textColor="@color/black_333"
                android:textSize="@dimen/sp_14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_p" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/new_again_et"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_40"
                android:layout_marginStart="@dimen/dp_15"
                android:background="@null"
                android:gravity="end|center_vertical"
                android:hint="@string/input_new_pas_again"
                android:inputType="textPassword"
                android:textSize="@dimen/sp_14"
                app:layout_constraintBottom_toBottomOf="@+id/new_again"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/new_again"
                app:layout_constraintTop_toTopOf="@+id/new_again" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>