<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.data.mobile.net.bean.GlobalUserInfoBean" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        android:layoutAnimation="@anim/layout_fall_down"
        android:padding="@dimen/dp_20"
        tools:context="com.data.hemo.mobile.ui.activity.LoginActivity"
        tools:layoutAnimation="@null">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_37"
            android:layout_marginTop="@dimen/dp_120"
            android:text="@string/phone_login"
            android:textColor="@color/black_333"
            android:textSize="@dimen/sp_28"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_7"
            android:text="@string/login_h"
            android:textColor="@color/gray_999"
            android:textSize="@dimen/sp_15"
            app:layout_constraintStart_toStartOf="@+id/login_name"
            app:layout_constraintTop_toBottomOf="@+id/login_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_40"
            android:background="@drawable/shape_b_ffffff_c_8"
            android:drawableStart="@drawable/p_p"
            android:drawablePadding="@dimen/dp_5"
            android:hint="@string/p_input_name"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_40"
            android:textColor="@color/black_333"
            android:textSize="@dimen/sp_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hint" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/delete"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_marginEnd="@dimen/dp_5"
            android:padding="@dimen/dp_10"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/name"
            app:srcCompat="@drawable/x_r" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ps"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@drawable/shape_b_ffffff_c_8"
            android:drawableStart="@drawable/s"
            android:drawablePadding="@dimen/dp_5"
            android:hint="@string/p_input_ps"
            android:inputType="textPassword"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_40"
            android:textColor="@color/black_333"
            android:textSize="@dimen/sp_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/v_g"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:padding="@dimen/dp_15"
            app:layout_constraintBottom_toBottomOf="@+id/ps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ps"
            app:srcCompat="@drawable/gone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/auth_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_12"
            android:background="@drawable/shape_b_ffffff_c_8"
            android:drawableStart="@drawable/s"
            android:drawablePadding="@dimen/dp_5"
            android:hint="@string/p_auth_code"
            android:inputType="textPassword"
            android:maxLength="8"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_40"
            android:textColor="@color/black_333"
            android:textSize="@dimen/sp_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ps" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/auth_code_img"
            android:layout_width="@dimen/dp_90"
            android:layout_height="@dimen/dp_40"
            android:layout_marginEnd="@dimen/dp_5"
            app:layout_constraintBottom_toBottomOf="@+id/auth_code"
            app:layout_constraintEnd_toEndOf="@+id/auth_code"
            app:layout_constraintTop_toTopOf="@+id/auth_code" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@drawable/shape_b_theme40_c_4"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auth_code" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/agreement_s"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:srcCompat="@drawable/unconsent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:textColor="@color/gray_999"
            android:textSize="@dimen/sp_13"
            app:layout_constraintStart_toEndOf="@+id/agreement_s"
            app:layout_constraintTop_toTopOf="@+id/agreement_s"
            tools:text="@string/agreement" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>