<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_35"
            android:text="@string/title_my"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/sr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/phone_layout"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_55"
                android:elevation="@dimen/dp_5"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/dp_20"
                android:paddingEnd="@dimen/dp_20">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/p_icon"
                    android:drawablePadding="@dimen/dp_5"
                    android:text="@string/portraits"
                    android:textColor="@color/black_333" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/phone_img"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    android:src="@drawable/ic_default_head2" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:background="@color/gray_eee" />

            <com.gk.world.resouce.dynamic.kv.KeyValueSingleView
                android:id="@+id/name"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_1"
                android:elevation="@dimen/dp_5"
                android:paddingStart="@dimen/dp_20"
                android:paddingEnd="@dimen/dp_20"
                app:is_edit="false"
                app:key_color="@color/black_333"
                app:key_drawable_left="@drawable/name_icon"
                app:key_size="@dimen/sp_14"
                app:key_text="@string/name"
                app:value_color="@color/black_333"
                app:value_gravity="end"
                app:value_size="@dimen/sp_12" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_10"
                android:background="@color/theme_background" />

            <com.gk.world.resouce.dynamic.kv.KeyValueSingleView
                android:id="@+id/phone"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/dp_5"
                android:paddingStart="@dimen/dp_20"
                android:paddingEnd="@dimen/dp_20"
                app:desensitize="true"
                app:is_edit="false"
                app:key_color="@color/black_333"
                app:key_drawable_left="@drawable/phone_icon"
                app:key_size="@dimen/sp_14"
                app:key_text="@string/phone"
                app:value_color="@color/black_333"
                app:value_gravity="end"
                app:value_size="@dimen/sp_12"
                app:value_type="phone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:background="@color/gray_eee" />

            <com.gk.world.resouce.dynamic.kv.KeyValueSingleView
                android:id="@+id/identity"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_1"
                android:elevation="@dimen/dp_5"
                android:paddingStart="@dimen/dp_20"
                android:paddingEnd="@dimen/dp_20"
                app:desensitize="true"
                app:is_edit="false"
                app:key_color="@color/black_333"
                app:key_drawable_left="@drawable/id_icon"
                app:key_size="@dimen/sp_14"
                app:key_text="@string/identity"
                app:value_color="@color/black_333"
                app:value_gravity="end"
                app:value_size="@dimen/sp_12"
                app:value_type="identity" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:background="@color/gray_eee" />

            <com.gk.world.resouce.dynamic.kv.KeyValueSingleView
                android:id="@+id/area"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_1"
                android:elevation="@dimen/dp_5"
                android:paddingStart="@dimen/dp_20"
                android:paddingEnd="@dimen/dp_20"
                app:is_edit="false"
                app:key_color="@color/black_333"
                app:key_drawable_left="@drawable/city_icon"
                app:key_size="@dimen/sp_14"
                app:key_text="@string/area"
                app:value_color="@color/black_333"
                app:value_gravity="end"
                app:value_size="@dimen/sp_12" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:background="@color/gray_eee" />

            <com.gk.world.resouce.dynamic.kv.KeyValueSingleView
                android:id="@+id/department"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_1"
                android:elevation="@dimen/dp_5"
                android:paddingStart="@dimen/dp_20"
                android:paddingEnd="@dimen/dp_20"
                app:is_edit="false"
                app:key_color="@color/black_333"
                app:key_drawable_left="@drawable/department_icon"
                app:key_size="@dimen/sp_14"
                app:key_text="@string/department"
                app:value_color="@color/black_333"
                app:value_gravity="end"
                app:value_size="@dimen/sp_12" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:background="@color/gray_eee" />

            <com.gk.world.resouce.dynamic.kv.KeyValueSingleView
                android:id="@+id/role"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_1"
                android:elevation="@dimen/dp_5"
                android:paddingStart="@dimen/dp_20"
                android:paddingEnd="@dimen/dp_20"
                app:is_edit="false"
                app:key_color="@color/black_333"
                app:key_drawable_left="@drawable/role_icon"
                app:key_size="@dimen/sp_14"
                app:key_text="@string/role"
                app:value_color="@color/black_333"
                app:value_gravity="end"
                app:value_size="@dimen/sp_12" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_10"
                android:background="@color/theme_background" />

            <com.gk.world.resouce.dynamic.kv.KeyValueSingleView
                android:id="@+id/alert_pw"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_1"
                android:elevation="@dimen/dp_5"
                android:paddingStart="@dimen/dp_20"
                android:paddingEnd="@dimen/dp_20"
                app:is_edit="false"
                app:key_color="@color/black_333"
                app:key_drawable_left="@drawable/pas_icon"
                app:key_size="@dimen/sp_14"
                app:key_text="@string/alert_pw"
                app:value_color="@color/black_333"
                app:value_drawable="@drawable/icon_arrow_right"
                app:value_gravity="end"
                app:value_size="@dimen/sp_12" />


            <com.gk.world.resouce.dynamic.kv.KeyValueSingleView
                android:id="@+id/set"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_1"
                android:elevation="@dimen/dp_5"
                android:paddingStart="@dimen/dp_20"
                android:paddingEnd="@dimen/dp_20"
                android:visibility="gone"
                app:is_edit="false"
                app:key_color="@color/black_333"
                app:key_drawable_left="@drawable/set_icon"
                app:key_size="@dimen/sp_14"
                app:key_text="@string/system_set"
                app:value_color="@color/black_333"
                app:value_drawable="@drawable/icon_arrow_right"
                app:value_gravity="end"
                app:value_size="@dimen/sp_12" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_15"
            android:background="@drawable/shape_b_ffffff_c_8_s_theme"
            android:text="@string/logout_login"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/sp_16"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sr" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>