<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_b_ffffff_c_8"
    android:padding="@dimen/dp_20">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/icon_caozuo"
        android:drawableEnd="@drawable/x"
        android:drawablePadding="@dimen/dp_5"
        android:text="@string/title_tips"
        android:textColor="@color/black_333"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        tools:text="提示"
        android:textColor="@color/black_333"
        android:padding="@dimen/dp_10"
        android:textSize="@dimen/sp_13"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:layout_editor_absoluteX="15dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_cancel"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_40"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:background="@drawable/shape_b_null_c_8_s_ffd9d9d9"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/black_333"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toStartOf="@+id/tv_sure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sure"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_40"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/shape_b_fff_c_8_s_ffec1212"
        android:gravity="center"
        android:text="@string/sure"
        android:textColor="@color/red_ffec1212"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_cancel"
        app:layout_constraintTop_toBottomOf="@+id/content" />
</androidx.constraintlayout.widget.ConstraintLayout>